# chrome-reloader

./: reloader.cabal
src/: Chrome.hs  CmdArgs.hs  Commands.hs  Main.hs  Watch.hs
