name:                reloader
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/reloader#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable reloader
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , transformers
                     , websockets
                     , Spock
                     , text
                     , bytestring
                     , mtl
                     , network
                     , network-uri
                     , vector
                     , containers
                     , process
                     , aeson
                     , http-conduit
                     , lens
                     , lens-aeson
                     , optparse-applicative
                     , split
                     , fsnotify
